# pandas-maxminddb

./: .flake8  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE.md  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-lint.txt
.github/workflows/: build.yml  ci.yml  lint.yml  test.yml  workflows.yml
pandas_maxminddb/: __init__.py
python/pandas_maxminddb/: __init__.py  pandas_maxminddb.pyi
src/: errors.rs  geo_column.rs  geolocate.rs  lib.rs  lookup_result.rs
struct_deep_getter/: Cargo.toml
struct_deep_getter/src/: lib.rs
struct_deep_getter_derive/: Cargo.toml
struct_deep_getter_derive/src/: lib.rs
struct_deep_getter_derive/tests/: tests.rs
tests/: test_pandas_maxminddb.py
