[package]
name = "pandas-maxminddb"
version = "0.1.0"
authors = ["Andrew Korzhuev <korzhuev@andrusha.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pandas_maxminddb"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module"] }
numpy = "0.17"
maxminddb = "0.23.0"

[features]
abi3 = ["pyo3/abi3-py37", "generate-import-lib"]
generate-import-lib = ["pyo3/generate-import-lib"]

[workspace]
