[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "pandas-maxminddb"
version = "0.2.1"
description = "Fast geolocation library for Pandas Dataframes, built on Numpy C-FFI"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pandas",
    "numpy"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux"
]

[tool.maturin]
python-source = "python"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '(^/.git|^/.venv|^/.nox|^/.pytest_cache)'
